<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>de.dhbw.woped</groupId>
		<artifactId>WoPeD</artifactId>
		<version>${revision}</version>
	</parent>

	<artifactId>WoPeD-Editor</artifactId>
	<packaging>jar</packaging>
	<name>WoPeD-Editor</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.toedter</groupId>
			<artifactId>jcalendar</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-CommonLibs</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-QuantAnalysis</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-AProMoRe</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Configuration</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-GUI</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Core</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-QualAnalysis</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-Flamingo</artifactId>
			<version>${project.version}</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis-ext</artifactId>
				</exclusion>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>de.dhbw.woped</groupId>
			<artifactId>WoPeD-ProcessMetrics</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>